--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,25 @@
     <title></title>
 </head>
 <body>
+<a href="#" class="refresh">Refresh</a>
+
+    <section>
+        <div class="user1">
+            <a href="" class="username"></a>
+            <a href="#" class="close1">x</a>
+            <img src="" alt=""/>
+        </div>
+        <div class="user2">
+            <a href="" class="username"></a>
+            <a href="#" class="close2">x</a>
+            <img src="" alt=""/>
+        </div>
+        <div class="user3">
+            <a href="" class="username"></a>
+            <a href="#" class="close3">x</a>
+            <img src="" alt=""/>
+        </div>
+    </section>
 
 <script src="bundle.js"></script>
 </body>
